# cs3-runtime-sdl

./: .gitignore  .gitmodules  ASSET_LICENSES.md  CMakeLists.txt  HISTORY  MUSIC_LICENSES.md  Makefile  NOTICE  OPEN_SOURCE_COMPLIANCE.md  README.md  THIRD_PARTY.md  dockerfile
.github/workflows/: android.yml  appImage-build.yml  appImage.yml  deb-package.yml  emscripten.yml  macos.yml  mingw32.yml  windows_release.yml
android-project/: .gitignore
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt
android-project/app/jni/src/: CMakeLists.txt
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
data/: animz.obl  credits.txt  game.cfg  levels.mapz  tiles.obl
data/assets/: users.obl
data/colormaps/: Alana.ini  Lisa.ini  Paul.ini
data/music/: 02 - Fast Face.xm  Ievan_Banjo3.xm
data/musics/: 01 - First Secret.xm  04 - Grab the Diamonds Dont get killed.xm  06 - DeathTrap.xm
data/pixels/: animz.obl  bosses.obl  sheet1.obl  tiles.obl  users.obl
data/sounds/: coin1.oga
data/text/: help.txt  hints.txt
docker/: dockerfile-deb  dockerfile-mingw32-static  dockerfile-ubuntu-static
itools/mapzutil/: .gitignore
itools/mapzutil/src/: main.cpp
src/: actor.cpp  actor.h  ai_path.cpp  ai_path.h  animator.cpp  animator.h  animzdata.h  anniedata.h  app.rc  assetman.cpp  assetman.h  boss.cpp  boss.h  bossdata.cpp  bossdata.h  build.h  chars.cpp  chars.h  colormap.cpp  colormap.h  colormasks.h  engine.cpp  engine.h  engine_hw.cpp  engine_hw.h  events.h  font8x8.h  game.cpp  game.h  game_ai.cpp  game_ai.h  gamemixin.cpp  gamemixin.h  gamesfx.h  gamestats.cpp  gamestats.h  gameui.cpp  gameui.h  isprite.h  layer.cpp  (+46 more)
src/shared/: DotArray.cpp  DotArray.h  FileMem.cpp  FileMem.h  FileWrap.cpp  FileWrap.h  Frame.cpp  Frame.h  FrameSet.cpp  FrameSet.h  IFile.h  PngMagic.cpp  PngMagic.h  helper.cpp  helper.h  logger.h
src/shared/implementers/: mu_sdl.cpp  mu_sdl.h  sn_sdl.cpp  sn_sdl.h
src/shared/interfaces/: IMusic.h  ISound.h
src/shared/music/: mu_sdl.h
src/shared/xm/: modplay.cpp  modplay.h  xm_context.cpp  xm_internal.h  xm_load.cpp  xm_play.cpp
src/template/: body.html  footer.html  shell_minimal.html
techdocs/: BUILD.md  MUSIC_LICENSES.md  OPEN_SOURCE_COMPLIANCE.md  THIRD_PARTY.md  attr.txt
techdocs/bosses/: .gitignore  bosses.ini  demon.ini  parse.py
techdocs/bosses/data/: beholder1_attack.json  beholder1_attacks-trim.json  harpy-attack.json
techdocs/colormap/alana/: purple-godmode.ini  purple-godmode.json  purple-rage.ini
techdocs/colormap/lisa/: lisa-godmode.ini  lisa-rage.ini  lisa-rage.json  lisa-sugarrush.json
techdocs/colormap/paul/: cowboy-godmode.ini  cowboy-godmode.json  cowboy-rage.ini  cowboy-rage.json  cowboy-rage2.json
techdocs/gamespec/: attr.txt  controllerdb.txt
techdocs/layers/: parse.py
techdocs/layers/data/: layer0.json
tests/: stateparser.cpp  stateparser.h  t_frameset.cpp  t_frameset.h  t_game.cpp  t_game.h  t_gamestats.cpp  t_gamestats.h  t_ifile.cpp  t_ifile.h  t_map.cpp  t_map.h  t_maparch.cpp  t_maparch.h  t_pngmagic.cpp  t_pngmagic.h  t_recorder.cpp  t_recorder.h  t_runtime.cpp  t_runtime.h  t_stateparser.cpp  t_stateparser.h  t_states.cpp  t_states.h  t_strhelper.cpp  t_strhelper.h  thelper.cpp  thelper.h  tmain.cpp
tests/in/: levels1.mapz  levels2.mapz  test.rec
tests/in/ima/: (C)FRANK.IMA
tests/in/imc1/: ALIH1LF0.IMA
tests/in/mcx/: Tygozi.mcx
tests/in/obl3/: Le Chat i.obl  Meldina.obl  Signs.obl  Slimer.obl
tests/in/obl4/: BearMan.obl  heady.obl
tests/in/refs/: headymcx-obl5.obl  headymcx-obl5s.obl  headyobl4-obl5.obl  headyobl4-obl5s.obl  headyobl5-obl5.obl  headyobl5-obl5s.obl
tools/chars/: .gitignore
tools/chars/src/: main.cpp
tools/mapzutil/src/: main.cpp
tools/mcxz/: .gitignore  data.ini  jewels.ini  old-data.ini
tools/mcxz/obl5/: bricks.map  bricks.obl  bricksdata.h
tools/mcxz/obl5/mundane/colormaps/: cowboy-sugarrush.ini  purple-rage.json
tools/mcxz/obl5/paid/colormaps/: cowboy-sugarrush.json  lisa-godmode.json  lisa-sugarrush.ini  purple-sugarrush.ini  purple-sugarrush.json
tools/mcxz/paid/: .gitignore  source.txt
tools/mcxz/src/: main.cpp  sheet.cpp  sheet.h  tileset.cpp  tileset.h
tools/sheet/: .gitignore  boss.txt  scroll.txt
tools/sheet/config/: animz.txt  beholder1.txt  bones.txt  bosses.txt  harpy.txt  list.txt  list0.txt  plant1.txt  scroll.txt  vampire.txt
tools/sheet/src/: main.cpp
